--- a/src/Components/Title.css
+++ b/src/Components/Title.css
@@ -1,7 +1,27 @@
-h1{
+.title{
+
      color: white;
-     font-size: 70px;
-     background-color: black;
-     padding: 15px;
-     margin: 0 0 10px;
+     display: flex;
+     flex-direction: row;
+     justify-content: center;
+     margin: 0;
+     /*color: white;*/
+     /*font-size: 70px;*/
+     /*background-color: black;*/
+     /*padding: 15px;*/
+     /*margin: 0 0 10px;*/
+     /*display: flex;*/
+     /*flex-direction: row;*/
+     /*justify-content: center;*/
+}
+.title  img{
+     max-width: 500px;
+}
+
+.title div{
+     color: black;
+     font-size: 30px;
+     font-weight: bolder;
+     margin-top: 70px;
+     margin-right: 50px;
 }
