--- a/src/Components/Title.css
+++ b/src/Components/Title.css
@@ -1,4 +1,23 @@
 
 .blog-title{
+    color: #282c34;
+    font-family: "Courier New", 'DINPro-Medium', serif;
+    font-size: xxx-large;
+    font-weight: bold;
+
+    text-shadow: 2px 2px 4px deeppink;
+
+}
+
+.title-box {
+    background-color: #8098b2;
+    border: solid #8098b2;
+    margin: 10px 0px 0px 0px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    box-shadow: 5px 5px 10px #282c34;
 
 }
