--- a/src/Components/Title.css
+++ b/src/Components/Title.css
@@ -7,17 +7,41 @@
 
     text-shadow: 2px 2px 4px deeppink;
 
+
+
 }
 
 .title-box {
     background-color: #8098b2;
     border: solid #8098b2;
     margin: 10px 0 0 0;
-    height: 100px;
+    height: 150px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+
     align-items: center;
 
     box-shadow: 5px 5px 10px #282c34;
+
+}
+
+.link-box {
+
+    display: flex;
+    justify-content: space-around;
+}
+
+.link {
+
+    margin: 0 20px;
+
+    color: #282c34;
+    font-family: "Courier New", 'DINPro-Medium', serif;
+    font-size: larger;
+    font-weight: bold;
+    text-decoration: none;
+    text-shadow: 2px 2px 4px deeppink;
+
+
 
 }
