--- a/src/Components/Title.css
+++ b/src/Components/Title.css
@@ -15,7 +15,7 @@
     background-color: #8098b2;
     border: solid #8098b2;
     margin: 10px 0 0 0;
-    height: 150px;
+    height: 10%;
     display: flex;
     flex-direction: column;
 
